--- a/preview/css/icons.css
+++ b/preview/css/icons.css
@@ -1318,3 +1318,23 @@
 .icon-zeus-sword { background-image: url(../img/zeus-sword.png);}
 .icon-zigzag-leaf { background-image: url(../img/zigzag-leaf.png);}
 .icon-zigzag-tune { background-image: url(../img/zigzag-tune.png);}
+.icon-number-1 { background-image: url(../img/number-1.png);}
+.icon-number-2 { background-image: url(../img/number-2.png);}
+.icon-number-3 { background-image: url(../img/number-3.png);}
+.icon-number-4 { background-image: url(../img/number-4.png);}
+.icon-number-5 { background-image: url(../img/number-5.png);}
+.icon-number-6 { background-image: url(../img/number-6.png);}
+.icon-number-7 { background-image: url(../img/number-7.png);}
+.icon-number-8 { background-image: url(../img/number-8.png);}
+.icon-number-9 { background-image: url(../img/number-9.png);}
+.icon-number-10 { background-image: url(../img/number-10.png);}
+.icon-number-11 { background-image: url(../img/number-11.png);}
+.icon-number-12 { background-image: url(../img/number-12.png);}
+.icon-number-13 { background-image: url(../img/number-13.png);}
+.icon-number-14 { background-image: url(../img/number-14.png);}
+.icon-number-15 { background-image: url(../img/number-15.png);}
+.icon-number-16 { background-image: url(../img/number-16.png);}
+.icon-number-17 { background-image: url(../img/number-17.png);}
+.icon-number-18 { background-image: url(../img/number-18.png);}
+.icon-number-19 { background-image: url(../img/number-19.png);}
+.icon-number-20 { background-image: url(../img/number-20.png);}
