--- a/preview/css/icons.css
+++ b/preview/css/icons.css
@@ -1318,6 +1318,10 @@
 .icon-zeus-sword { background-image: url(../img/zeus-sword.png);}
 .icon-zigzag-leaf { background-image: url(../img/zigzag-leaf.png);}
 .icon-zigzag-tune { background-image: url(../img/zigzag-tune.png);}
+.icon-number-0 { background-image: url(../img/number-0.png);}
+.icon-number-1-8 { background-image: url(../img/number-1-8.png);}
+.icon-number-1-4 { background-image: url(../img/number-1-4.png);}
+.icon-number-1-2 { background-image: url(../img/number-1-2.png);}
 .icon-number-1 { background-image: url(../img/number-1.png);}
 .icon-number-2 { background-image: url(../img/number-2.png);}
 .icon-number-3 { background-image: url(../img/number-3.png);}
@@ -1338,3 +1342,8 @@
 .icon-number-18 { background-image: url(../img/number-18.png);}
 .icon-number-19 { background-image: url(../img/number-19.png);}
 .icon-number-20 { background-image: url(../img/number-20.png);}
+.icon-number-21 { background-image: url(../img/number-21.png);}
+.icon-number-22 { background-image: url(../img/number-22.png);}
+.icon-number-23 { background-image: url(../img/number-23.png);}
+.icon-number-24 { background-image: url(../img/number-24.png);}
+.icon-number-30 { background-image: url(../img/number-30.png);}
