--- a/preview/css/quickref.css
+++ b/preview/css/quickref.css
@@ -174,6 +174,14 @@
     color: RoyalBlue;
 }
 
+#section-xp-cr, #section-xp-cr .item-icon {
+    background-color: MediumVioletRed;
+    border-color: MediumVioletRed;
+}
+#section-xp-cr .text {
+    color: MediumVioletRed;
+}
+
 /* ------------------------------------------------------------------------- */
 /* Page container */
 /* ------------------------------------------------------------------------- */
