Added lots of stuff
* Damage types
* Healing, dying, resting
* Stabilize action
* Mounting/Dismounting

--- a/css/icons.css
+++ b/css/icons.css
@@ -86,6 +86,7 @@
 .icon-beanstalk { background-image: url(../img/beanstalk.png);}
 .icon-beard { background-image: url(../img/beard.png);}
 .icon-beast-eye { background-image: url(../img/beast-eye.png);}
+.icon-bed { background-image: url(../img/bed.png);}
 .icon-bee { background-image: url(../img/bee.png);}
 .icon-beech { background-image: url(../img/beech.png);}
 .icon-beer-stein { background-image: url(../img/beer-stein.png);}
