--- a/preview/css/icons.css
+++ b/preview/css/icons.css
@@ -873,6 +873,7 @@
 .icon-pretty-fangs { background-image: url(../img/pretty-fangs.png);}
 .icon-profit { background-image: url(../img/profit.png);}
 .icon-psychic-waves { background-image: url(../img/psychic-waves.png);}
+.icon-pull { background-image: url(../img/pull.png);}
 .icon-pulse { background-image: url(../img/pulse.png);}
 .icon-pummeled { background-image: url(../img/pummeled.png);}
 .icon-pumpkin-lantern { background-image: url(../img/pumpkin-lantern.png);}
