Travel section + other stuff
Added a section on travel (specifically for distances longer than something you'd do in combat).

Added dropping concentration to free actions.

Added tremorsense to environmental effects.

Added falling damage to damage types. (Even though it's just bludgeoning, the calculation is nice to have).

--- a/css/icons.css
+++ b/css/icons.css
@@ -187,6 +187,7 @@
 .icon-caged-ball { background-image: url(../img/caged-ball.png);}
 .icon-cake-slice { background-image: url(../img/cake-slice.png);}
 .icon-caldera { background-image: url(../img/caldera.png);}
+.icon-cavalry { background-image: url(../img/cavalry.png);}
 .icon-campfire { background-image: url(../img/campfire.png);}
 .icon-cancel { background-image: url(../img/cancel.png);}
 .icon-cancer { background-image: url(../img/cancer.png);}
@@ -795,6 +796,7 @@
 .icon-oak { background-image: url(../img/oak.png);}
 .icon-ocarina { background-image: url(../img/ocarina.png);}
 .icon-octopus { background-image: url(../img/octopus.png);}
+.icon-old-wagon { background-image: url(../img/old-wagon.png);}
 .icon-omega { background-image: url(../img/omega.png);}
 .icon-on-target { background-image: url(../img/on-target.png);}
 .icon-one-eyed { background-image: url(../img/one-eyed.png);}
