--- a/preview/css/quickref.css
+++ b/preview/css/quickref.css
@@ -174,6 +174,14 @@
     color: ForestGreen;
 }
 
+#section-travel, #section-travel .item-icon {
+    background-color: SaddleBrown;
+    border-color: SaddleBrown;
+}
+#section-travel .text {
+    color: SaddleBrown;
+}
+
 #section-xp, #section-xp .item-icon {
     background-color: RoyalBlue;
     border-color: RoyalBlue;
