Added languages section
Covers languages from the PHB

--- a/css/icons.css
+++ b/css/icons.css
@@ -57,6 +57,7 @@
 .icon-back-pain { background-image: url(../img/back-pain.png);}
 .icon-backstab { background-image: url(../img/backstab.png);}
 .icon-backup { background-image: url(../img/backup.png);}
+.icon-bad-gnome { background-image: url(../img/bad-gnome.png);}
 .icon-balloons { background-image: url(../img/balloons.png);}
 .icon-bandage-roll { background-image: url(../img/bandage-roll.png);}
 .icon-bandaged { background-image: url(../img/bandaged.png);}
@@ -375,6 +376,7 @@
 .icon-drowning { background-image: url(../img/drowning.png);}
 .icon-duality { background-image: url(../img/duality.png);}
 .icon-duel { background-image: url(../img/duel.png);}
+.icon-dwarf-face { background-image: url(../img/dwarf-face.png);}
 .icon-eagle-emblem { background-image: url(../img/eagle-emblem.png);}
 .icon-earth-crack { background-image: url(../img/earth-crack.png);}
 .icon-earth-spit { background-image: url(../img/earth-spit.png);}
@@ -518,6 +520,7 @@
 .icon-glowing-hands { background-image: url(../img/glowing-hands.png);}
 .icon-gluttonous-smile { background-image: url(../img/gluttonous-smile.png);}
 .icon-gluttony { background-image: url(../img/gluttony.png);}
+.icon-goblin-head { background-image: url(../img/goblin-head.png);}
 .icon-gold-bar { background-image: url(../img/gold-bar.png);}
 .icon-gold-scarab { background-image: url(../img/gold-scarab.png);}
 .icon-goo-explosion { background-image: url(../img/goo-explosion.png);}
@@ -797,6 +800,7 @@
 .icon-ocarina { background-image: url(../img/ocarina.png);}
 .icon-octopus { background-image: url(../img/octopus.png);}
 .icon-old-wagon { background-image: url(../img/old-wagon.png);}
+.icon-ogre { background-image: url(../img/ogre.png);}
 .icon-omega { background-image: url(../img/omega.png);}
 .icon-on-target { background-image: url(../img/on-target.png);}
 .icon-one-eyed { background-image: url(../img/one-eyed.png);}
@@ -807,6 +811,7 @@
 .icon-orb-direction { background-image: url(../img/orb-direction.png);}
 .icon-orb-wand { background-image: url(../img/orb-wand.png);}
 .icon-orbital { background-image: url(../img/orbital.png);}
+.icon-orc-head { background-image: url(../img/orc-head.png);}
 .icon-ouroboros { background-image: url(../img/ouroboros.png);}
 .icon-over-infinity { background-image: url(../img/over-infinity.png);}
 .icon-overdose { background-image: url(../img/overdose.png);}
@@ -1351,3 +1356,5 @@
 .icon-number-23 { background-image: url(../img/number-23.png);}
 .icon-number-24 { background-image: url(../img/number-24.png);}
 .icon-number-30 { background-image: url(../img/number-30.png);}
+.icon-diablo-skull { background-image: url(../img/diablo-skull.png);}
+.icon-imp { background-image: url(../img/imp.png);}
