--- a/preview/css/icons.css
+++ b/preview/css/icons.css
@@ -1358,3 +1358,9 @@
 .icon-number-30 { background-image: url(../img/number-30.png);}
 .icon-diablo-skull { background-image: url(../img/diablo-skull.png);}
 .icon-imp { background-image: url(../img/imp.png);}
+.icon-robber { background-image: url(../img/robber.png);}
+.icon-shaking-hands { background-image: url(../img/shaking-hands.png);}
+.icon-dungeon-gate { background-image: url(../img/dungeon-gate.png);}
+.icon-lockpicks { background-image: url(../img/lockpicks.png);}
+.icon-paint-brush { background-image: url(../img/paint-brush.png);}
+.icon-wool { background-image: url(../img/wool.png);}
