Abilities, additions to Damage, new icon for Critical miss

--- a/css/icons.css
+++ b/css/icons.css
@@ -3407,3 +3407,4 @@
 .icon-zigzag-leaf{ background-image: url(../img/zigzag-leaf.png);}
 .icon-zigzag-tune{ background-image: url(../img/zigzag-tune.png);}
 .icon-zipper{ background-image: url(../img/zipper.png);}
+.icon-dice-twenty-faces-one{ background-image: url(../img/dice-twenty-faces-one.png);}
