--- a/css/quickref.css
+++ b/css/quickref.css
@@ -438,7 +438,7 @@ p:first-child {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     z-index: 0;
     background-color: rgba(136,136,136,.5);
 }
